# knhk

./: .cursorrules  .gitignore  .gitmodules  .tool-versions  AUDIT_EXECUTIVE_SUMMARY.md  BREAKING_POINTS.md  CHANGELOG.md  CHICAGO_TDD_V1_3_0_INTEGRATION_SUMMARY.md  CLAUDE.md  COMMIT_STATUS.md  COMPILATION_DEPENDENCY_ANALYSIS.md  COMPILATION_VERIFICATION_PLAN.md  COMPLETION_REPORT_KMS_PHASE1.md  CRITICAL_AUDIT_FINDINGS.md  Cargo.toml  DEFINITION_OF_DONE.yaml  DEFINITION_OF_DONE_VALIDATION.md  DELIVERY_SUMMARY_2028_SWARMS.md  DELIVERY_SUMMARY_PHASES_3_5.md  DELIVERY_SUMMARY_SPIFFE_PHASE2.md  DIATAXIS_EVALUATION_FINDINGS.md  DOCTRINE_2027.md  DOCTRINE_COVENANT.md  DOCTRINE_INDEX.md  EXPLORATION_SUMMARY.md  FALSE_POSITIVES_REPORT.md  FORTUNE500_CONFIDENCE_GAP_ROOT_CAUSE.md  FORTUNE500_IMPLEMENTATION_COMPLETE.md  FORTUNE500_IMPLEMENTATION_ROADMAP.md  FORTUNE500_REVOPS_CASE_STUDY.md  GAPS_FILLED_SUMMARY.md  GEMBA_REPORT.md  IMPLEMENTATION_COMPLETE_2027.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY_2027.md  KMS_DELIVERABLES_INDEX.md  KMS_QUICK_START.md  KNHK_2027_PRESS_RELEASE.md  MAPE-K_AUTONOMIC_INTEGRATION.md  MAPE-K_COMPLETE.md  (+60 more)
benches/performance/: Cargo.toml  guard_evaluation_bench.rs  hook_execution_bench.rs  mape_k_cycle_bench.rs  pattern_library_bench.rs
rust/: .clippy.toml  .nextest.toml  BENCHMARK_RESULTS_SUMMARY.txt  CHANGELOG.md  CHICAGO_TDD_INTEGRATION.md  CLIPPY_FIXES_SUMMARY.md  Cargo.toml  Makefile.toml  README.md  WORKSPACE_SETUP.md  aot-test-backtrace.txt  benchmark_analysis.json  check_all_packages.py  chicago-tdd-tests.txt  clippy.toml  crate_metrics.csv  deny.toml  integration-tests.txt  knhk-etl-unit-tests.txt  performance-tests.txt  rust-integration-tests.txt  rust-unit-tests.txt
rust/.cargo/: config.toml
rust/benches/: compilation_benchmarks.rs  latency_benchmarks.rs  throughput_benchmarks.rs
rust/chicago-tdd/: Cargo.toml  QUICKSTART.md  README.md
rust/chicago-tdd-tools/: Cargo.toml  README.md  VALIDATION_REPORT.md
rust/docs/: BENCHMARK_EXECUTIVE_SUMMARY.md  BUILD_VALIDATION_MATRIX.md  CI_CD_SUMMARY.md  CRATES_IO_SETUP.md  DETAILED_CRATE_METRICS.md  INDEX.md  MIGRATION_GUIDE_v1.0.0.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_BENCHMARK.md  PERMUTATIONAL_VALIDATION_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  QUICK_START_CRATES_IO.md  README_BENCHMARK.md  RELEASE_DOCUMENTATION_SUMMARY.md  RELEASE_NOTES_v1.0.0.md  VALIDATION_MATRIX_SUMMARY.txt  VALIDATION_QUICK_REFERENCE.md  byteflow_hot_warm_cold_patterns.md  byteflow_nanosecond_optimizations.md  code-quality-analysis-v1.0.0.md  content_addressing.md  process-mining-xes-integration.md
rust/knhk-accelerate/: Cargo.toml
rust/knhk-admission/: Cargo.toml
rust/knhk-aot/: Cargo.toml  README.md
rust/knhk-autonomic/: Cargo.toml  README.md
rust/knhk-autonomous-loop/: Cargo.toml  README.md
rust/knhk-autonomous-system/: Cargo.toml  README.md
rust/knhk-byzantine/: Cargo.toml  README.md
rust/knhk-change-engine/: Cargo.toml
rust/knhk-cli/: .clippy.toml  Cargo.toml  FORTUNE5_CLI_COMPLETE.md  IMPLEMENTATION.md  README.md
rust/knhk-closed-loop/: Cargo.toml
rust/knhk-config/: Cargo.toml  README.md
rust/knhk-connectors/: Cargo.toml  README.md
rust/knhk-consensus/: Cargo.toml
rust/knhk-dflss/: Cargo.toml  README.md
rust/knhk-etl/: Cargo.toml  README.md  SPLIT_PLAN.md  remediation_log.txt
rust/knhk-hot/: Cargo.toml  Makefile.patterns  README.md  build.rs  clippy-errors.txt
rust/knhk-integration-tests/: COVENANT_TESTS.md  Cargo.toml  README.md
rust/knhk-json-bench/: Cargo.toml  README.md
rust/knhk-kernel/: Cargo.toml  README.md  UNSAFE_CODE_AUDIT.md  build.rs
rust/knhk-kms-advanced/: Cargo.toml  README.md
rust/knhk-latex/: Cargo.toml  README.md
rust/knhk-latex-compiler/: Cargo.toml
rust/knhk-lockchain/: Cargo.toml  README.md
rust/knhk-marketplace/: Cargo.toml
rust/knhk-mu-kernel/: Cargo.toml  Makefile.verification  README.md
rust/knhk-neural/: Cargo.toml
rust/knhk-ontology/: Cargo.toml
rust/knhk-otel/: Cargo.toml  README.md
rust/knhk-patterns/: ARCHITECTURE.md  Cargo.toml  DOCS_SUMMARY.md  HOOK_INTEGRATION.md  INTEGRATION_STATUS.md  PATTERNS.md  PRODUCTION_READINESS.md  README.md  architecture.puml  build.rs  complete-overview.puml  composition.puml  content-addressing.puml  hook-integration.puml  hook-orchestration.puml  hook-patterns.puml  pattern-flow.puml  workflow-engine-integration.puml
rust/knhk-process-mining/: Cargo.toml
rust/knhk-projections/: Cargo.toml  README.md
rust/knhk-promotion/: Cargo.toml
rust/knhk-quantum/: Cargo.toml  README.md
rust/knhk-sidecar/: Cargo.toml  FORTUNE5_COMPLETE.md  FORTUNE5_GAPS_FIXED.md  FORTUNE5_IMPLEMENTATION_COMPLETE.md  FORTUNE5_STATUS.md  PROMOTION_GATES_IMPLEMENTATION.md  QUICK_START_PROMOTION_GATES.md  README.md  SIDECAR_WORKFLOW_INTEGRATION.md  build.rs
rust/knhk-swarm/: Cargo.toml  README.md
rust/knhk-test-cache/: Cargo.toml  README.md
rust/knhk-unrdf/: Cargo.toml  README.md
rust/knhk-validation/: Cargo.toml  README.md
rust/knhk-warm/: Cargo.toml  README.md
rust/knhk-wasm/: Cargo.toml  Makefile  README.md
rust/knhk-workflow-engine/: ABSTRACTION_ARCHITECTURE_PLAN.md  Cargo.toml  DELTA_SIGMA_IMPLEMENTATION.md  FORTUNE5_IMPLEMENTATION_PLAN.md  FORTUNE5_INTEGRATION.md  FORTUNE5_READINESS.md  GAP_IMPLEMENTATION_PLAN.md  HYPER_ADVANCED_FEATURES.md  MEMORY_OPTIMIZATION_REPORT.txt  MICROKERNEL_ARCHITECTURE.md  PHASE1_SUMMARY.md  README.md  SUMMARY.md  build.rs
rust/knhk-workflow-macros/: Cargo.toml
rust/knhk-workflow-xml-legacy/: Cargo.toml  DEPRECATION_NOTICE.md  README.md
rust/knhk-yawl/: ACTOR_ENGINE_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
rust/scripts/: README.md  analyze_benchmark.py  analyze_compilation_benchmark.py  benchmark_compilation.sh  benchmark_crates.sh  benchmark_parallel.sh  benchmark_summary.sh  partial_benchmark_analysis.sh  setup-git-hooks.sh  test-crates-io-install.sh  validate-feature-matrix.sh  validate-integrations.sh  validate-pre-commit.sh  validate-pre-push.sh  validate-release.sh  validate-tests.sh  verify-crate-versions.sh
(+4549 files in other folders)
