[package]
name = "knhk"
version = "5.0.0"
edition = "2021"
authors = ["KNHK Team"]
description = "Knowledge Navigation & Hypothesis Kinetics - Production Platform for Fortune 500"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knhk/knhk"
keywords = ["workflow", "orchestration", "enterprise", "autonomic", "covenant"]
categories = ["development-tools", "database", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Storage
rocksdb = "0.21"
lz4 = "1.24"

# Observability
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-stdout = { version = "0.2", features = ["trace", "metrics"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"

# Networking
axum = "0.7"
tonic = "0.10"
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
num_cpus = "1.16"
hostname = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
wiremock = "0.5"
test-case = "3.3"

[[bin]]
name = "knhk"
path = "src/main.rs"

[lib]
name = "knhk"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[workspace]
members = [
    ".",
    # Existing phases (1-6)
    "rust/knhk-validation",
    "rust/knhk-test-cache",
    "rust/knhk-sidecar",
    "rust/knhk-patterns",
    "rust/knhk-otel",
    "rust/knhk-lockchain",
    "rust/knhk-latex-compiler",
    "rust/knhk-latex",
    "rust/knhk-json-bench",
    "rust/knhk-hot",
    "rust/knhk-etl",
    "rust/knhk-dflss",
    "rust/knhk-connectors",
    "rust/knhk-config",
    "rust/knhk-cli",
    "rust/knhk-admission",
    "rust/knhk-process-mining",
    "rust/chicago-tdd",
    "rust/knhk-autonomic",
    "rust/knhk-integration-tests",
    "rust/knhk-workflow-engine",
    "rust/knhk-warm",
    # Temporarily exclude problematic packages
    # "rust/knhk-kernel",
    # "rust/knhk-neural",
    # "rust/knhk-quantum",
    # "rust/knhk-consensus",
    # "rust/knhk-accelerate",
    # "rust/knhk-marketplace",
]

[workspace.package]
edition = "2021"
version = "1.0.0"
authors = ["KNHK Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/knhk/knhk"

[workspace.dependencies]
# Core dependencies
blake3 = "1.8"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.10", features = ["server", "transport"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Network & RPC
prost = "0.12"
prost-types = "0.12"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-build = "0.10"
rustls = "0.21"
rustls-pemfile = "1.0"

# Storage
rocksdb = "0.21"
lz4 = "1.24"
sled = "0.34"

# Observability
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics", "trace"] }
opentelemetry-http = "0.10"
opentelemetry-semantic-conventions = "0.13"
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
hashbrown = "0.14"
rayon = "1.7"
ahash = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
num_cpus = "1.16"
hostname = "0.3"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
simd-json = { version = "0.14", features = ["known-key"] }
rdkafka = "0.36"
tokio-stream = "0.1"
futures = "0.3"
toml = "0.8"
lru = "0.12"
rio_turtle = "0.8"
sha3 = "0.10"
fastrand = "2.0"
linkme = "0.3"
governor = "0.6"
metrics = "0.23"
metrics-prometheus = "0.6"
ring = "0.17"
regex = "1.10"
crc32fast = "1.4"
tokio-test = "0.4"
serial_test = "3.0"
loom = "0.7"
rand = "0.8"
quickcheck = "1.0"
insta = "1.34"

# Configuration & CLI
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }
clap-noun-verb = "3.7"
clap-noun-verb-macros = "3.7"
tera = "1.19"
tower = "0.4"
tower-http = "0.5"

# RDF & Semantic
oxigraph = "0.4"
process_mining = "0.1"

# Internal dependencies
knhk-otel = { path = "rust/knhk-otel", version = "1.0.0" }
knhk-workflow-engine = { path = "rust/knhk-workflow-engine", version = "1.0.0" }
knhk-hot = { path = "rust/knhk-hot", version = "1.0.0" }
knhk-validation = { path = "rust/knhk-validation", version = "1.0.0" }

# Testing
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
wiremock = "0.5"
test-case = "3.3"