[package]
name = "knhk"
version = "5.0.0"
edition = "2021"
authors = ["KNHK Team"]
description = "Knowledge Navigation & Hypothesis Kinetics - Production Platform for Fortune 500"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knhk/knhk"
keywords = ["workflow", "orchestration", "enterprise", "autonomic", "covenant"]
categories = ["development-tools", "database", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Storage
rocksdb = "0.21"
lz4 = "1.24"

# Observability
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-stdout = { version = "0.2", features = ["trace", "metrics"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"

# Networking
axum = "0.7"
tonic = "0.10"
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
num_cpus = "1.16"
hostname = "0.3"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
wiremock = "0.5"
test-case = "3.3"

[[bin]]
name = "knhk"
path = "src/main.rs"

[[bin]]
name = "execute_revops"
path = "src/bin/execute_revops.rs"

[lib]
name = "knhk"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[workspace]
members = [
    ".",
    # Existing phases (1-6)
    "rust/knhk-validation",
    "rust/knhk-test-cache",
    "rust/knhk-sidecar",
    "rust/knhk-patterns",
    "rust/knhk-otel",
    "rust/knhk-lockchain",
    "rust/knhk-latex-compiler",
    "rust/knhk-latex",
    "rust/knhk-json-bench",
    "rust/knhk-hot",
    "rust/knhk-etl",
    "rust/knhk-dflss",
    "rust/knhk-connectors",
    "rust/knhk-config",
    "rust/knhk-cli",
    "rust/knhk-admission",
    "rust/knhk-process-mining",
    "rust/chicago-tdd",
    "rust/knhk-autonomic",
    "rust/knhk-integration-tests",
    "rust/knhk-workflow-engine",
    "rust/knhk-warm",
    "rust/knhk-kernel",
    "rust/knhk-neural",
    # NEW: Phases 7-10
    "rust/knhk-quantum",
    "rust/knhk-consensus",
    "rust/knhk-accelerate",
    "rust/knhk-marketplace",
]