[workspace]
resolver = "2"
members = [
    "knhk-hot",
    "knhk-otel",
    "knhk-kernel",            # Phase 3 Hot Path Rust Kernel (≤8 ticks)
    "knhk-connectors",
    "knhk-lockchain",
    "knhk-etl",
    "knhk-warm",
    "knhk-validation",
    "knhk-config",
    "knhk-patterns",          # Van der Aalst workflow patterns
    "knhk-workflow-engine",   # Enterprise YAWL workflow engine
    "knhk-process-mining",    # Process mining and workflow analytics
    "knhk-autonomic",         # MAPE-K Autonomic Knowledge Integration (Covenant 3)
    "knhk-sidecar",
    "knhk-cli",
    "knhk-integration-tests",
    "knhk-json-bench",        # JSON parsing benchmark using knhk-hot
    "knhk-dflss",             # Chicago TDD testing framework (now published to crates.io)
    "knhk-latex-compiler",    # LaTeX to PDF compiler
    "knhk-latex",             # LaTeX CLI using clap-noun-verb
    "knhk-test-cache",        # Autonomic test cache daemon
    "knhk-mu-kernel",         # μ-kernel ISA for knowledge operations
    "chicago-tdd",            # Chicago TDD Performance Harness (Chatman Constant enforcement)
    "knhk-neural",            # Phase 6: Advanced Neural Integration with Self-Learning Workflows
    "knhk-accelerate",        # Phase 9: GPU/FPGA Hardware Acceleration
    "knhk-marketplace",       # Phase 10: Market deployment, licensing, and billing
    "knhk-closed-loop",       # Closed-loop MAPE-K dark matter implementation
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["KNHK Team"]

[workspace.dependencies]
# Core system crates (internal)
knhk-hot = { path = "./knhk-hot", version = "1.0.0" }
knhk-otel = { path = "./knhk-otel", version = "1.0.0" }
knhk-connectors = { path = "./knhk-connectors", version = "1.0.0" }
knhk-lockchain = { path = "./knhk-lockchain", version = "1.0.0" }
knhk-etl = { path = "./knhk-etl", version = "1.0.0" }
knhk-warm = { path = "./knhk-warm", version = "1.0.0" }
knhk-validation = { path = "./knhk-validation", version = "1.0.0" }
knhk-config = { path = "./knhk-config", version = "1.0.0" }
knhk-patterns = { path = "./knhk-patterns", version = "1.0.0" }
knhk-workflow-engine = { path = "./knhk-workflow-engine", version = "1.0.0" }
knhk-process-mining = { path = "./knhk-process-mining", version = "1.0.0" }
knhk-sidecar = { path = "./knhk-sidecar", version = "1.0.0" }

# External analytics crates
process_mining = "0.1"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4"

# gRPC/Protobuf
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"

# HTTP framework
axum = "0.8.6"
tower = "0.5.2"
tower-http = "0.6.6"

# TLS
rustls = "0.23.35"
rustls-pemfile = "2.2.0"

# OpenTelemetry (0.31 for CLI, 0.21 for ETL - keep separate)
opentelemetry = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", default-features = false }
opentelemetry-http = { version = "0.31", default-features = false }
opentelemetry-semantic-conventions = "0.15"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
miette = { version = "7.6", features = ["fancy", "serde"] }

# Hashing & crypto
blake3 = "1.8"
sha2 = "0.10"
hex = "0.4"

# Collections & data structures
hashbrown = { version = "0.15", default-features = false }
lru = "0.16"
ahash = "0.8"

# RDF & semantic web
oxigraph = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Kafka
rdkafka = "0.36"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap-noun-verb = "3.4.0"
clap-noun-verb-macros = "3.4.0"

# Storage
sled = "0.34"

# Git
git2 = "0.18"

# Template engine
tera = { version = "1.19", features = ["builtins"] }

# Policy engine
regorus = { version = "0.4", default-features = false, features = [
    "std",
    "arc",
] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
rayon = "1.11"
futures = "0.3"

# Dev/test dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.10"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Workspace-wide profile settings
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false

# Profile for knhk-hot benchmarks (hot path optimization)
[profile.bench.package.knhk-hot]
opt-level = 3
codegen-units = 1
debug = true      # Keep debug symbols for perf analysis
