[package]
name = "knhk-performance-benches"
version = "1.0.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hook_execution_bench"
harness = false

[[bench]]
name = "pattern_library_bench"
harness = false

[[bench]]
name = "guard_evaluation_bench"
harness = false

[[bench]]
name = "mape_k_cycle_bench"
harness = false
