[package]
name = "chicago-tdd"
version = "1.0.0"
edition = "2021"
authors = ["KNHK Team"]
description = "Chicago TDD Performance Harness - Enforces Chatman Constant (≤8 ticks) for critical path operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knhk/knhk"

[lib]
name = "chicago_tdd"
path = "src/lib.rs"

[[bench]]
name = "executor_latency"
harness = false

[[bench]]
name = "task_dispatch"
harness = false

[[bench]]
name = "decision_point"
harness = false

[[bench]]
name = "join_operation"
harness = false

[[bench]]
name = "mape_k_latency"
harness = false

[dependencies]
# Core utilities
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Statistics
statrs = "0.17"

# Time measurement
libc = "0.2"

# Terminal output
colored = "2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[target.'cfg(target_arch = "x86_64")'.dependencies]
# x86-64 specific for RDTSC instruction
raw-cpuid = "11.2"

[features]
default = []
# Enable strict enforcement (build fails if bounds violated)
strict = []
# Enable detailed profiling output
profiling = []
