[package]
name = "knhk-accelerate"
version = "9.0.0"
edition = "2021"
description = "Phase 9: Hardware Acceleration with GPU, FPGA, and SIMD"
authors = ["KNHK Team"]
license = "MIT"

[dependencies]
# GPU acceleration - NVIDIA CUDA
cudarc = { version = "0.9", optional = true }
# Note: cuda crate conflicts with oxigraph's bindgen. Use cudarc instead.

# GPU acceleration - AMD ROCm
# Note: HIP bindings may require manual installation
# hip = { version = "0.1", optional = true }

# GPU acceleration - Portable OpenCL
ocl = { version = "0.19", optional = true }

# SIMD intrinsics
packed_simd = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Performance & metrics
prometheus = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
ndarray = "0.15"
ndarray-linalg = { version = "0.16", optional = true }
num_cpus = "1.16"
num = "0.4"

# Memory management
parking_lot = "0.12"
dashmap = "5.5"
lazy_static = "1.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

[features]
default = ["cpu"]
cpu = []
gpu = ["cudarc"]
opencl = ["ocl"]
fpga = []
simd = ["packed_simd"]
all-accelerators = ["gpu", "opencl", "fpga", "simd"]
