[package]
name = "knhk-admission"
version = "1.0.0"
edition = "2021"
description = "Admission gate for KNHK with SHACL validation, PB congruence, and PQC verification"
repository = "https://github.com/yourusername/knhk"
homepage = "https://github.com/yourusername/knhk"
documentation = "https://docs.rs/knhk-admission"
keywords = ["admission", "validation", "shacl", "security"]
categories = ["algorithms", "authentication"]
license = "MIT"
authors = ["KNHK Team"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
oxigraph = { workspace = true, optional = true }
knhk-validation = { path = "../knhk-validation", version = "1.0.0", optional = true }
pqcrypto-dilithium = { version = "0.5", optional = true }

[features]
default = []
rdf = ["oxigraph"]
validation = ["dep:knhk-validation"]
pqc = ["dep:pqcrypto-dilithium"]

[dev-dependencies]
chicago-tdd-tools = { version = "1.3.0", features = ["testing-extras", "otel", "weaver", "testcontainers", "async"] }
tokio = { version = "1", features = ["full"] }

