[package]
name = "knhk-byzantine"
version = "0.1.0"
edition = "2021"
authors = ["KNHK Team"]
description = "Byzantine Fault-Tolerant consensus for distributed MAPE-K loops"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
futures = "0.3"
async-trait = "0.1"
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
proptest = "1.4"

[[bench]]
name = "consensus_benchmark"
harness = false

[lib]
name = "knhk_byzantine"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
