[package]
name = "knhk-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap-noun-verb = "3.3.0"
clap-noun-verb-macros = "3.3.0"
clap = { version = "4.5", features = ["derive"] }
knhk-hot = { path = "../knhk-hot", version = "1.0.0" }
knhk-warm = { path = "../knhk-warm", version = "0.1.0", features = ["std"] }
knhk-config = { path = "../knhk-config", version = "0.1.0", features = ["std"] }
knhk-etl = { path = "../knhk-etl", version = "0.1.0", features = ["std"] }
knhk-connectors = { path = "../knhk-connectors", version = "0.1.0", features = [
  "std",
] }
knhk-lockchain = { path = "../knhk-lockchain", version = "0.1.0", features = [
  "std",
] }
knhk-otel = { path = "../knhk-otel", version = "0.1.0", optional = true, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
linkme = "0.3"

# OpenTelemetry dependencies - all optional with std feature
opentelemetry = { version = "0.31", optional = true, default-features = false }
opentelemetry_sdk = { version = "0.31", optional = true, default-features = false }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false }
opentelemetry-http = { version = "0.31", optional = true, default-features = false }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi"], optional = true }
opentelemetry-semantic-conventions = { version = "0.15", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json", "blocking"] }

[features]
default = ["std", "otel"]
std = []
otel = ["knhk-otel", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-http", "tracing", "tracing-opentelemetry", "tracing-subscriber", "opentelemetry-semantic-conventions", "reqwest"]

[[bin]]
name = "knhk"
path = "src/main.rs"
