[package]
name = "knhk-cli"
version = "1.0.0"
edition = "2021"
description = "High-performance RDF/SPARQL processing CLI with hot path optimization"
repository = "https://github.com/yourusername/knhk"
homepage = "https://github.com/yourusername/knhk"
documentation = "https://docs.rs/knhk-cli"
keywords = ["rdf", "sparql", "cli", "performance", "simd"]
categories = ["command-line-utilities", "database"]
license = "MIT"
authors = ["KNHK Team"]

[dependencies]
clap-noun-verb = "3.4.0"
clap-noun-verb-macros = "3.4.0"
clap = { version = "4.5", features = ["derive"] }
knhk-hot = { path = "../knhk-hot", version = "1.0.0" }
knhk-warm = { path = "../knhk-warm", version = "1.0.0", features = ["std"] }
knhk-config = { path = "../knhk-config", version = "1.0.0", features = ["std"] }
knhk-etl = { path = "../knhk-etl", version = "1.0.0", features = ["std"] }
knhk-connectors = { path = "../knhk-connectors", version = "1.0.0", features = [
  "std",
] }
knhk-lockchain = { path = "../knhk-lockchain", version = "1.0.0", features = [
  "std",
] }
knhk-sidecar = { path = "../knhk-sidecar", version = "1.0.0", optional = true, features = [
  "fortune5",
] }
oxigraph = { version = "0.5" }
sha2 = "0.10"
knhk-otel = { path = "../knhk-otel", version = "1.0.0", optional = true, features = [
  "std",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
linkme = "0.3"

# OpenTelemetry dependencies - all optional with std feature
opentelemetry = { version = "0.31", optional = true, default-features = false }
opentelemetry_sdk = { version = "0.31", optional = true, default-features = false }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false }
opentelemetry-http = { version = "0.31", optional = true, default-features = false }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "ansi",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.15", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json", "blocking"] }

[features]
default = ["std", "otel"]
std = []
fortune5 = ["knhk-sidecar"]
otel = [
  "knhk-otel",
  "opentelemetry",
  "opentelemetry_sdk",
  "opentelemetry-otlp",
  "opentelemetry-http",
  "tracing",
  "tracing-opentelemetry",
  "tracing-subscriber",
  "opentelemetry-semantic-conventions",
  "reqwest",
]

[[bin]]
name = "knhk"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
